--- a/Task 1.ipynb
+++ b/Task 1.ipynb
@@ -594,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion: We can see the value of the root mean squared error is 4.849. Here root mean squared error is less than 10% of the mean value of the percentages of all the student scores. Hence, it is safe to conclude that the model did a decent job to predict the the student score as 92.33 % when student studies for 9.25 hours."
+    "### Conclusion: We can see the value of the root mean squared error is 4.849. Here root mean squared error is less than 10% of the mean value of the percenttages of all the student scores. Hence, it is safe to conclue the model did a decent job to predict the the student score as 93.89 % when student studies for 9.25 hours."
    ]
   },
   {
